Add html structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>hello world</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>WebsiteTest</title>
+</head>
+<body>
+  <h1>hello world</h1>
+    <p> Call me Peter</p>
+
+
+
+
+</body>
+</html>
