--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
     <p> 
       This site is a sample project for the <strong>awesome</strong> Git
-      tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
+      tutorial <em>Learn Enough™ Git to Be Dangerous</em>. <a href="http://learnenough.com/git-tutorial">…</a>
     </p>
 
 </body>
