--- a/about.html
+++ b/about.html
@@ -14,5 +14,7 @@
       tutorial <em>Learn Enough™ Git to Be Dangerous</em>. <a href="http://learnenough.com/git-tutorial">…</a>
     </p>
 
+  <img src="images/polar_bear.jpg" alt="Polar bear">
+  
 </body>
 </html>
