--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     <p> 
       This site is a sample project for the <strong>awesome</strong> Git
       tutorial <em>Learn Enough™ Git to Be Dangerous</em>. <a href="http://learnenough.com/git-tutorial">…</a>
+      <!-- add something here to fix trademark -->
     </p>
 
   <img src="images/polar_bear.jpg" alt="Polar bears">
