--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>About US</title>
+	<meta charset="utf-8">
 </head>
 
 <body>
@@ -11,7 +12,7 @@
 
     <p> 
       This site is a sample project for the <strong>awesome</strong> Git
-      tutorial <em>Learn Enough™ Git to Be Dangerous</em>. <a href="http://learnenough.com/git-tutorial">…</a>
+      tutorial <em>Learn Enough™ Git to Be Dangerous</em>. <a href="http://learnenough.com/git-tutorial">™</a>
       <!-- add something here to fix trademark -->
     </p>
 
