--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>WebsiteTest</title>
+	<meta charset="utf-8">
 </head>
 <body>
   <h1>hello world</h1>
-    <a href="about.html">About this project</a>
+    <a href="about.html">About this project™</a>
     <p> Call me Peter</p>
-<!-- add fix here too! -->
+
     <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
       <img src="images/breaching_whale.jpg">
     </a>
