--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
 
   <h1>hello world</h1>
-
+<a href="index.html">home</a>
     <p> 
       This site is a sample project for the <strong>awesome</strong> Git
       tutorial <em>Learn Enough™ Git to Be Dangerous</em>. <a href="http://learnenough.com/git-tutorial">™</a>
